# what-is-strings

./: CMakeLists.txt  README.md  build.sh  what-is-strings.cpp
test/: CMakeLists.txt  the-strings_test.cpp
